# lecturelens-deploy

./: README.md
backend/: .env.example  pyproject.toml
backend/data/: lecturelens.db
backend/src/app/: main.py
backend/src/app/api/: auth.py  study.py
backend/src/app/core/: db.py  user_schemas.py
backend/src/app/services/context/: ai_context_service.py
backend/src/app/services/study/: flashcards_service.py
frontend/: .env.example  .env.local  google.d.ts
frontend/app/: globals.css
frontend/app/flashcards/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: Sidebar.tsx
frontend/lib/: api.ts
